# TextureSynthesis

./: CMakeLists.txt  README.md  all.h  api.cpp  api.h  image.cpp  image.h  main.cpp  main.py  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/: 1.ttr  2.ttr  read.py  sample1.ttr
